--- a/brief_blog/style1.css
+++ b/brief_blog/style1.css
@@ -1,15 +1,44 @@
 header{
-    background-color: rgb(12, 0, 245);
+    background-color: #067bf8;
     width: 100%;
-    height: 80px;
+    height: 40px;
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: white;
+    font-weight: bold;
+    font-family: monospace;
+    font-size: 18px;
+    border-bottom: #013f83 solid 2px;
+}
+header h2{
+    margin-left: -20%;
 }
 
+.headLinks{
+    display: flex;
+    /* flex-direction: row; */
+    justify-content: center;
+    gap: 20%;
+    margin-left: 20%;
+}
+
+.headLinks a{
+    /* width: 30%; */
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-family: monospace;
+    font-size: 15px;
+    
+}
+
+
 footer{
-    background-color: rgb(8, 0, 255);
+    background-color: #067bf8;
     width: 100%;
     height: 200px;
-    margin-top: 40%;
+    margin-top: 30%;
 }
 
 footer a{
@@ -32,30 +61,264 @@ body{
     align-items: center;
     margin-top: 5%;
     margin-bottom: 5%;
+    font-family: monospace;
 }
 .signup form, .signin form{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 35%;
     line-height: 2;
+    background-color: #eeebeb;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border: #067bf8 2px solid;
+    border-top: none;
 }
-.signup form input, .signin form input{
-    border-radius: 5px;
-    height: 25px;
-    width: 50%;
+.signup h2, .signin h2{
+    background-color: #067bf8;
+    text-align: center;
+    font-size: 25px;
+    color: white;
+    width: 35%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border: #067bf8 2px solid;
+    border-bottom: none;
+
 }
-.signup form .submit, .signin form .submit{
+
+.signup form label, .signin form label{
     margin-top: 5%;
-    width: 20%;
-    background-color: rgb(43, 0, 255);
+    font-weight: bold;
+    font-size: 15px;
+}
+
+
+.signup form input, .signin form input{
+    padding-left: 5%;
+    border-radius: 10px;
+    height: 45px;
+    width: 60%;
+    border: none;
+}
+
+
+.signup form input:hover{
+    border: solid #067bf8 2px;
+    box-shadow: 0 7px 4px rgba(0, 123, 255, 0.2);
+  }
+.signin form input:hover{
+    border: solid #067bf8 2px;
+    box-shadow: 0 7px 4px rgba(0, 123, 255, 0.2);
+}
+
+.signup form .submit, .signin form .submit{
+    padding-left: 0;
+    margin-top: 5%;
+    width: 18%;
+    height: 38px;
+    background-color: #067bf8;
+    color: white;
+    font-size: 15px;
 }
 
 .error {
     color: red;
-    font-size: 14px;
+    font-size: 15px;
+    font-style: italic;
 }
 .cnxerror{
     justify-self: center;
     margin-top: 10%;
+}
+
+.mainView{
+    display: flex;
+}
+
+.sidebar{
+    width: 15%;
+    height: 100vh;
+    background-color: #067bf8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.sidebar img{
+width: 35%;
+margin-top: 15%;
+}
+
+.sidebar .articles{
+    margin-top: 10%;
+    color: white;
+    font-family: monospace;
+    font-weight: bold;
+    font-size: 15px;
+    cursor: pointer;
+    
+}
+
+.sidebar .stats{
+    margin-top: 20%;
+    color: white;
+    font-family: monospace;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.sessionUser{
+    color: white;
+    font-family: monospace;
+    font-weight: bold;
+    font-size: 15px;
+}   
+
+.content{
+    display: flex;
+    width: 70%;
+    /* border: #067bf8 solid;
+    border-top: none; */
+}
+
+
+.boxContent{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 650px;
+    height: 500px;
+    border: solid #067bf8 2px;
+    border-radius: 10px;
+    margin-left: 20%;
+    margin-top: 5%;
+
+}
+.content form{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 70%;
+    align-items: center;
+}
+
+.createBtn{
+    height: 40px;
+    width: 100px;
+}
+
+#close{
+    width: 30px;
+    height: 20px;
+    position: relative;
+    top: 1%;
+    left: 47%;
+    margin-bottom: 5%;
+    background-color: rgb(255, 21, 21);
+    border: rgb(177, 1, 1) solid 1px;
+    border-radius: 5px;
+}
+
+.content h2{
+    margin-bottom: 5%;
+    font-family: monospace;
+    font-size: 30px;
+}
+
+.artlabel{
+    font-family: monospace;
+    font-size: 15px;
+    margin-bottom: 2%;
+}
+
+#articleTitle{
+    width: 80%;
+    height: 50px;
+    padding-left: 2%;
+    border-radius: 10px;
+    border: solid #067bf8 1px;
+    margin-bottom: 3%;
+}
+
+#articleContent{
+    width: 80%;
+    height: 180px;
+    padding-left: 2%;
+    padding-top: 2%;
+    border-radius: 10px;
+    border: solid #067bf8 1px;
+    margin-bottom: 4%;
+}
+
+.artsubmit{
+    width: 18%;
+    height: 38px;
+    background-color: #067bf8;
+    color: white;
+    font-size: 15px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+#articleTitle:hover{
+    border: solid #067bf8 2px;
+    box-shadow: 0 7px 4px rgba(0, 123, 255, 0.2);
+  }
+#articleContent:hover{
+    border: solid #067bf8 2px;
+    box-shadow: 0 7px 4px rgba(0, 123, 255, 0.2);
+  }
+
+  
+.createBtn{
+    width: 10%;
+    height: 38px;
+    background-color: #067bf8;
+    color: white;
+    font-size: 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    border: #0360c4 solid 2px;
+    position: relative;
+    top: 5%;
+    left: 90%;
+}
+
+
+.created_article{
+    border: #055ab5 3px solid;
+    border-radius: 10px;
+    padding: 5%;
+    background-color: #eeebeb;
+    display: flex;
+    flex-direction: row;
+    gap: 20%;
+    margin-bottom: 5%;
+    width: 80%;
+}
+
+.createdart{
+    width: 800px;
+    margin-top: 5%;
+    margin-left: -5%;
+}
+
+.title1 , .author1{
+    font-family: Arial, Helvetica, sans-serif;
+    width: 33%;
+    font-size: 16px;
+    word-spacing: 3px;
+    font-weight: bold;
+}
+.date1{
+    font-family: Arial, Helvetica, sans-serif;
+    width: 50%;
+    font-size: 13px;
+    text-align: right;
+    font-style: italic;
 }
