--- a/brief_blog/style1.css
+++ b/brief_blog/style1.css
@@ -1,27 +1,31 @@
 header{
     background-color: #067bf8;
     width: 100%;
-    height: 40px;
+    height: 45px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    margin-right: 50%;
     align-items: center;
     color: white;
     font-weight: bold;
     font-family: monospace;
     font-size: 18px;
-    border-bottom: #013f83 solid 2px;
+    border-bottom: #013f83 solid 1px;
 }
-header h2{
-    margin-left: -20%;
+.logo{
+    margin-left: 8%;
+    width: 140px;
+    height: 30px;
 }
 
 .headLinks{
     display: flex;
-    /* flex-direction: row; */
+    width: 900px;
     justify-content: center;
-    gap: 20%;
-    margin-left: 20%;
+    gap: 10%;
+    margin-left: 10%;
 }
+
 
 .headLinks a{
     /* width: 30%; */
@@ -30,7 +34,29 @@ header h2{
     font-weight: bold;
     font-family: monospace;
     font-size: 15px;
-    
+}
+
+#signinlink{
+    position: absolute;
+    right: 3%;
+    background-color: #eeebeb;
+    color: #333232;
+    font-weight: bold;
+    padding: 8px;
+    align-self: center;
+    border-radius: 5px;
+}
+
+.logout{
+    position: relative;
+    right: 75%;
+    background-color: #eeebeb;
+    color: #333232;
+    font-weight: bold;
+    padding: 8px;
+    align-self: center;
+    border-radius: 5px;
+    border: none;
 }
 
 
@@ -38,7 +64,6 @@ footer{
     background-color: #067bf8;
     width: 100%;
     height: 200px;
-    margin-top: 30%;
 }
 
 footer a{
@@ -55,6 +80,28 @@ body{
     padding: 0;
 }
 
+.about_body{  
+  background-image: url(images/about_back.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.about_text{
+  background-color: rgba(255, 0, 0, 0.315);
+}
+
+.about_content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  padding-left: 10%;
+  padding-bottom: 5%;
+  padding-top: 2%;
+  color: white;
+}
+
 .signup, .signin{
     display: flex;
     flex-direction: column;
@@ -63,11 +110,27 @@ body{
     margin-bottom: 5%;
     font-family: monospace;
 }
-.signup form, .signin form{
+
+.signup form{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 35%;
+    height: 450px;
+    line-height: 2;
+    background-color: #eeebeb;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border: #067bf8 2px solid;
+    border-top: none;
+}
+
+.signin form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 35%;
+    height: 350px;
     line-height: 2;
     background-color: #eeebeb;
     border-bottom-right-radius: 10px;
@@ -117,12 +180,16 @@ body{
 
 .signup form .submit, .signin form .submit{
     padding-left: 0;
-    margin-top: 5%;
+    margin-top: 8%;
     width: 18%;
     height: 38px;
     background-color: #067bf8;
     color: white;
     font-size: 15px;
+}
+
+.signin p, .signup p{
+    margin-top: -8%;
 }
 
 .error {
@@ -141,71 +208,101 @@ body{
 
 .sidebar{
     width: 15%;
-    height: 200vh;
+    height: 120vh;
     background-color: #067bf8;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
 }
 
+
 .sidebar img{
-width: 35%;
+width: 32%;
 margin-top: 15%;
+}
+#connected{
+  width: 15px;
+  position: relative;
+  top: -7%;
+  right: -10%;
+}
+.sessionUser{
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 17px;
+  margin-top: -17%;
+} 
+
+#hr{
+  width: 100%;
+  margin-top: 8px;
+  height: 1px;
+  background-color: #013f83;
+  border: none; 
 }
 
 .sidebar .articles{
-    margin-top: 10%;
-    color: white;
-    font-family: monospace;
-    font-weight: bold;
-    font-size: 15px;
-    cursor: pointer;
-    
+  margin-top: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 12px;
+  cursor: pointer;
+  width: 100px; 
 }
 
 .sidebar .stats{
-    margin-top: 40%;
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 120px;
     color: white;
     font-family: monospace;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 12px;
 }
 .sidebar .createBtn{
-    margin-top: 20%;
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 120px;
     color: white;
+    background-color: #067bf8;
+    border: none;
     font-family: monospace;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 12px;
     text-align: center;
     cursor: pointer;
 }
 
-.sessionUser{
-    color: white;
-    font-family: monospace;
-    font-weight: bold;
-    font-size: 15px;
-}   
-
-
 
 .content{
-    display: flex;
-    width: 70%;
-    /* border: #067bf8 solid;
-    border-top: none; */
+  display: flex;
+  width: 70%;
+  height: 120vh;
+  overflow: auto;
+}
+.content::-webkit-scrollbar {
+  display: none; 
 }
 
 .boxContent{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 650px;
+    width: 65%;
     height: 500px;
     border: solid #067bf8 2px;
     border-radius: 10px;
-    margin-left: 20%;
+    margin-left: 10%;
     margin-top: 5%;
     position: absolute;
     background-color: #eeebeb;
@@ -226,7 +323,7 @@ margin-top: 15%;
 
 #close{
     width: 30px;
-    height: 20px;
+    height: 25px;
     position: relative;
     top: 1%;
     left: 47%;
@@ -237,7 +334,8 @@ margin-top: 15%;
 }
 
 .content h2{
-    margin-bottom: 5%;
+    margin-bottom: 3%;
+    margin-top: -5%;
     font-family: monospace;
     font-size: 30px;
 }
@@ -245,7 +343,7 @@ margin-top: 15%;
 .artlabel{
     font-family: monospace;
     font-size: 15px;
-    margin-bottom: 2%;
+    margin-bottom: 1%;
 }
 
 #articleTitle{
@@ -259,18 +357,18 @@ margin-top: 15%;
 
 #articleContent{
     width: 80%;
-    height: 180px;
+    height: 200px;
     padding-left: 2%;
     padding-top: 2%;
     border-radius: 10px;
     border: solid #067bf8 1px;
-    margin-bottom: 4%;
+    margin-bottom: 8%;
 }
 
 .artsubmit{
-    width: 18%;
-    height: 38px;
-    background-color: #067bf8;
+    width: 150px;
+    height: 70px;
+    background-color: #2df300;
     color: white;
     font-size: 15px;
     border-radius: 10px;
@@ -318,12 +416,20 @@ margin-top: 15%;
     margin-left: 5%;
 }
 
+#article_hr{
+  width: 100%;
+  margin-top: 8px;
+  height: 1px;
+  background-color: #013f83;
+  border: none; 
+
+}
+
 .title1{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     word-spacing: 3px;
     font-weight: bold;
-    text-decoration: underline;
 }
 
 .content1{
@@ -376,18 +482,65 @@ margin-top: 15%;
     width: 16%;
     gap: 5%;
     margin-left: -1%;
+    margin-top: 2%;
 
 }
+.edit_content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#editarticleForm{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+}
 
+#editarticleForm label{
+  margin-bottom: 1%;
+}
 
-/* styles.css */
+#editarticleForm #articleContent{
+height: 300px;
+}
 
+.editartsubmit{
+  width: 150px;
+  height: 40px;
+  background-color: #2df300;
+  color: white;
+  font-size: 15px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.canceledit{
+  width: 150px;
+  height: 40px;
+  background-color: #f30000;
+  color: white;
+  font-size: 15px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.edit_content h2{
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.editbuttons{
+  display: flex;
+  gap: 7%;
+}
   
   .blog-card {
     background-color: #ffffff;
-    border: 1px solid #ddd;
+    border: 1px solid #c1c1c1;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.1);
     width: 300px;
     overflow: hidden;
     transition: transform 0.3s;
@@ -395,6 +548,7 @@ margin-top: 15%;
   
   .blog-card:hover {
     transform: translateY(-5px);
+    box-shadow: 0px 10px 10px #333232;
   }
   
   .blog-image {
@@ -413,10 +567,16 @@ margin-top: 15%;
     color: #333;
   }
   
-  .blog-date {
-    font-size: 14px;
+.blog-card .blog-date {
+    font-size: 10px;
     color: #999;
     margin-bottom: 12px;
+}
+  
+.blog-card .blog-author {
+    font-size: 14px;
+    color: #676767;
+    margin-top: -6px;
   }
   
   .blog-description {
@@ -442,12 +602,16 @@ margin-top: 15%;
   }
 
   .container{
-    height: 80vh;
+    /* height: 80vh; */
+    margin-top: 3%;
     display: flex;
-    justify-content: center;
-    gap: 20px;
     flex-wrap: wrap;
-    align-items: center;
+    gap: 30px;
+    row-gap: 60px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding-left: 7%;
+    padding-bottom: 10%;
   }
   
 
@@ -509,6 +673,13 @@ margin-top: 15%;
     font-size: 16px;
     color: #555;
   }
+
+  #likebtn{
+    width: 17px;
+    position: absolute;
+    top: 62.23%;
+    left: 16.36%;
+  }
   
   .comments-section {
     padding: 20px;
@@ -534,6 +705,13 @@ margin-top: 15%;
     border: 1px solid #ddd;
     border-radius: 4px;
     resize: none;
+  }
+
+  #comment_user{
+    border: #cdcccc solid 1px;
+    border-radius: 5px;
+    width: 15%;
+    padding-left: 1%;
   }
   
   .comment-button {
@@ -569,5 +747,29 @@ margin-top: 15%;
   }
 
   #likeCount{
-    cursor: pointer;
+    margin-left: 2.5%;
   }
+  #like{
+    cursor:auto;
+  }
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.icon {
+  width: 1rem; 
+  height: 1rem; 
+  margin-right: 0.25rem;
+}
+
+
+.icon path {
+  fill: none;
+  stroke: currentColor;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 2;
+}
